--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -16,6 +16,7 @@
       <ul class="nav navbar-nav">
         <li><a href="http://tasterproject.com/about">About</a></li>
         <li><a href="http://tasterproject.com/blog">Blog</a></li>
+        <li><a href="http://tasterproject.com/contact">Contact us</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">For Participants<span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
